# surfacemap

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/surfacemap/: __init__.py
src/surfacemap/analysis/: narrative.py  risk.py
src/surfacemap/api/: server.py
src/surfacemap/cli/: main.py
src/surfacemap/core/: config.py  llm.py  models.py
src/surfacemap/discovery/: active.py  base.py  crawler.py  dns.py  engine.py  enrichment.py  external_apis.py  http.py  nuclei.py  osint.py  screenshot.py  web.py
src/surfacemap/notifications/: slack.py
src/surfacemap/output/: mindmap.py  sarif.py
src/surfacemap/plugins/: loader.py  registry.py
src/surfacemap/scheduler/: differ.py  scheduler.py
src/surfacemap/storage/: db.py
src/surfacemap/ui/: app.py
